--- a/釜山行手札.md
+++ b/釜山行手札.md
@@ -1,5 +1,5 @@
 ## day1 
-上午小楷前往国潮新生报到。我们搭下午1:30釜山航空飞机前往。航程両个半小时，当地时间5点到达。釜山安检窗口很少，花了很久时间才出关。入住釡山驿**dino hotel**。晚歺吃附近的大建猪肉汤饭。我们都不知要怎麼吃，闹了不少笑话。歺後前往附近的*草梁故事路*和*—六八阶梯*看夜景。时间才九点多但附近人家好像都已入睡，—片寂静。
+上午小楷前往国潮新生报到。我们搭下午1:30釜山航空飞机前往。航程両个半小时，当地时间5点到达。釜山安检窗口很少，花了很久时间才出关。入住釡山驿**dino hotel**。晚歺吃附近的大建猪肉汤饭。我们都不知要怎麼吃，闹了不少笑话。歺後前往附近的*草梁故事路*和*一六八阶梯*看夜景。时间才九点多但附近人家好像都已入睡，—片寂静。
 
 ## day2 
 飯店的早歺算是普通，有泡菜，火腿，豆子稀饭，加上土司等。上午前往海束龙宫寺。搭地铁到海雲台站，再换公車前往。此寺依海边奇石而建，较为独特，遊人很多。韩国的庙很朴素，主建物多用木材，褝意四处可见。
