--- a/釜山行手札.md
+++ b/釜山行手札.md
@@ -1,6 +1,6 @@
 ## day1 
 上午小楷前往国潮新生报到。我们搭下午1:30釜山航空飞机前往。航程両个半小时，当地时间5点到达。釜山安检窗口很少，花了很久时间才出关。入住釡山驿**dino hotel**。晚歺吃附近的大建猪肉汤饭。我们都不知要怎麼吃，闹了不少笑话。歺後前往附近的*草梁故事路*和*一六八阶梯*看夜景。时间才九点多但附近人家好像都已入睡，—片寂静。
-![Air Busan](P1070909.JPG "option")
+![Air Busan](P1070909.JPG "釜山航空")
 
 ## day2 
 飯店的早歺算是普通，有泡菜，火腿，豆子稀饭，加上土司等。上午前往海束龙宫寺。搭地铁到海雲台站，再换公車前往。此寺依海边奇石而建，较为独特，遊人很多。韩国的庙很朴素，主建物多用木材，褝意四处可见。
@@ -17,6 +17,7 @@
 接著前往釜山大學，也许是暑假的綠故，學生不多。學校的最高處有竹林和楓樹，楓樹已開始變色，宛如圖畫。中午時間已近兩點，我們先到一家僑村炸雞點炸雞吃，餐廳只有我們四個人，但等了很久很久才上菜"||'，不知為何。之後，我們又到一家PIZZA店，這個PIZZA很特別，似乎沒有麵餅，都是用肉炸的。
 大學門口緊貼著一棟很大的NC百貨公司，附近的商圈不是那麼的擁擠。釜山大學地鐵站下面有人工河，水很乾淨，很多人在運動，在一個人行天橋上我們看到兩個中學生在比賽吐口水，看來此地也是有中輟生的。
 傍晚開始進入最後的購物，我們陪松蘭先逛中國城附近的超商，再坐計程車到南埔的BIFF，主要是逛廣場派出所旁小路上的夜市上的夜服攤。
+![Air Busan](P1080260.JPG "梵魚寺")
 
 ## day5
 早上搭10:40釜山班機回台。到機場的計程車司機很和氣，他用車上電子設備的預錄中文語音，向我們問好，並希望我們再次到釜山遊玩。
