--- a/釜山行手札.md
+++ b/釜山行手札.md
@@ -16,7 +16,7 @@
 ## day4 
 上午前往梵魚寺，先搭地鐵1號線至梵魚寺站，再搭90號公車。這個公車站很不好找，幸賴當地一位路人Mr.Jeong的協助，才順利找到。Mr.Jeong很熱心，我們靠著手機的翻譯軟體勉強溝通。Mr.Jeong應該是要跑步上梵魚寺運動，我們參觀完梵魚寺後又碰上了他 。他帶我們到下山的公車站位置，還特別囑咐司機要帶我們到山下的地鐵站。
 梵魚寺站很是古色古香，會選擇來這裡的遊客不像龍宮寺這麼多。寺旁很多茂盛的古木，形狀各異，就像是盆栽中的植物一樣。釜山這裡蚊蟲蒼蠅不多，即使在樹下也沒有被咬到的情形。
-接著前往釜山大學，也许是暑假的綠故，學生不多。學校的最高處有竹林和楓樹，楓樹已開始變色，宛如圖畫。中午時間已近兩點，我們先到一家僑村炸雞點炸雞吃，餐廳只有我們四個人，但等了很久很久才上菜"||'，不知為何。之後，我們又到一家PIZZA店，這個PIZZA很特別，似乎沒有麵餅，都是用肉炸的。
+接著前往釜山大學，也许是暑假的綠故，學生不多。學校的最高處有竹林和楓樹，楓樹已開始變色，宛如圖畫。中午時間已近兩點，我們先到一家僑村炸雞點炸雞吃，餐廳只有我們四個人，但等了很久很久才上菜來，不知為何。之後，我們又到一家PIZZA店，這個PIZZA很特別，似乎沒有麵餅，都是用肉炸的。
 大學門口緊貼著一棟很大的NC百貨公司，附近的商圈不是那麼的擁擠。釜山大學地鐵站下面有人工河，水很乾淨，很多人在運動，在一個人行天橋上我們看到兩個中學生在比賽吐口水，看來此地也是有中輟生的。
 傍晚開始進入最後的購物，我們陪松蘭先逛中國城附近的超商，再坐計程車到南埔的BIFF，主要是逛廣場派出所旁小路上的夜市上的夜服攤。
 ![Beomo Temple](P1080260.JPG "梵魚寺")
